# hw3-ichen22

./: .gitignore  Makefile  README.md  _toc.yml  ai_documentation.txt  index.md  myst.yml
ligotools/: pyproject.toml  utils.py
ligotools/ligotools/: __init__.py
ligotools/ligotools/tests/: test_utils.py
ligotools/tests/: test_readligo.py
